--- a/UrduPOS_Tagger.ipynb
+++ b/UrduPOS_Tagger.ipynb
@@ -25,9 +25,9 @@
    "source": [
     "\n",
     "filename = [\n",
-    "            'Urdu Tagged Corpus/00ur_pos.txt',\n",
-    "            'Urdu Tagged Corpus/01ur_pos.txt',\n",
-    "            'Urdu Tagged Corpus/02ur_pos.txt',\n",
+    "            '00ur_pos.txt',\n",
+    "            '01ur_pos.txt',\n",
+    "            '02ur_pos.txt',\n",
     "            ]\n",
     "data=[]\n",
     "for f in filename:\n",
